Fixing shadows being cutoff.

--- a/css/base.css
+++ b/css/base.css
@@ -822,12 +822,12 @@ article.small a:hover h2 {
 }
 #work article.large {
 	height: 590px;
-	width: 486px;
+	width: 490px;
 }
 #work article.medium {
 	height:438px;
 	margin-left: 160px;
-	width: 320px;
+	width: 322px;
 }
 #industries article.medium {
 	margin-left: 0px;
